refactor: refactor follow to standard