@@ -1,43 +1,67 @@
 package com.hust.courseservice.service.impl;
 
 import com.hust.commonlibrary.constant.AppConstants;
+import com.hust.commonlibrary.dto.ApiResponse;
 import com.hust.commonlibrary.dto.ListResponse;
 import com.hust.commonlibrary.exception.payload.ResourceNotFoundException;
+import com.hust.commonlibrary.utils.SecurityUtils;
+import com.hust.courseservice.client.InteractionClient;
+import com.hust.courseservice.client.LearningClient;
+import com.hust.courseservice.client.OrderClient;
+import com.hust.courseservice.client.UserClient;
+import com.hust.courseservice.client.dto.UserInternalResponse;
 import com.hust.courseservice.dto.request.CourseRequest;
 import com.hust.courseservice.dto.response.CourseResponse;
+import com.hust.courseservice.dto.response.LessonResponse;
+import com.hust.courseservice.dto.response.SectionResponse;
 import com.hust.courseservice.entity.Category;
 import com.hust.courseservice.entity.Course;
+import com.hust.courseservice.entity.Lesson;
 import com.hust.courseservice.mapper.CourseMapper;
+import com.hust.courseservice.mapper.LessonMapper;
+import com.hust.courseservice.mapper.SectionMapper;
 import com.hust.courseservice.repository.CategoryRepository;
 import com.hust.courseservice.repository.CourseRepository;
+import com.hust.courseservice.repository.LessonRepository;
+import com.hust.courseservice.repository.SectionRepository;
 import com.hust.courseservice.service.CourseService;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.data.mongodb.core.query.TextCriteria;
-import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.text.Normalizer;
-import java.util.List;
-import java.util.Locale;
-import java.util.Random;
+import java.util.*;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class CourseServiceImpl implements CourseService {
 
     private final CourseRepository courseRepository;
     private final CategoryRepository categoryRepository;
+    private final SectionRepository sectionRepository;
+    private final LessonRepository lessonRepository;
     private final CourseMapper courseMapper;
+    private final SectionMapper sectionMapper;
+    private final LessonMapper lessonMapper;
+    private final UserClient userClient;
+    private final InteractionClient interactionClient;
+    private final OrderClient orderClient;
+    private final LearningClient learningClient;
     private final Random random = new Random();
 
     @Override
+    @Transactional
     public CourseResponse create(CourseRequest request) {
-        String instructorId = SecurityContextHolder.getContext().getAuthentication().getName();
+        String instructorId = SecurityUtils.getCurrentUserIdOrThrow();
 
         Category category = null;
         if (request.getCategoryId() != null) {
@@ -59,6 +83,7 @@ public class CourseServiceImpl implements CourseService {
     }
 
     @Override
+    @Transactional
     public CourseResponse update(String id, CourseRequest request) {
         Course course = courseRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException(
@@ -86,21 +111,171 @@ public class CourseServiceImpl implements CourseService {
     }
 
     @Override
+    @Transactional
     public void delete(List<String> ids) {
         courseRepository.deleteAllById(ids);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public CourseResponse detail(String id) {
-        return courseRepository.findById(id)
-                .map(courseMapper::entityToResponse)
+        Course course = courseRepository.findById(id)
                 .orElseThrow(() -> new ResourceNotFoundException(
                         AppConstants.Resource_Constants.COURSE,
                         AppConstants.Field_Constants.ID,
                         id));
+        
+        CourseResponse response = courseMapper.entityToResponse(course);
+        List<CourseResponse> responses = Collections.singletonList(response);
+        
+        enrichInstructors(responses);
+        enrichRatings(responses);
+        enrichEnrollments(responses);
+
+        // Handle User Context & Progress
+        String currentUserId = SecurityUtils.getCurrentUserId().orElse(null);
+        Set<String> finishedLessonIds = new HashSet<>();
+        
+        if (currentUserId != null) {
+            // Check Ownership
+            ApiResponse<Boolean> isBoughtRes = orderClient.checkIfBought(currentUserId, id);
+            if (isBoughtRes != null && isBoughtRes.isSuccess()) {
+                response.setIsBought(isBoughtRes.getPayload());
+            }
+
+            // Fetch Progress
+            try {
+                ApiResponse<LearningClient.CourseProgressInternalResponse> progressRes = 
+                        learningClient.getCourseProgress(currentUserId, id);
+                if (progressRes != null && progressRes.isSuccess() && progressRes.getPayload() != null) {
+                    var payload = progressRes.getPayload();
+                    response.setProgress(payload.getProgressPercentage());
+                    if (payload.getFinishedLessonIds() != null) {
+                        finishedLessonIds.addAll(payload.getFinishedLessonIds());
+                    }
+                }
+            } catch (Exception e) {
+                log.error("Failed to fetch learning progress: {}", e.getMessage());
+            }
+        }
+
+        enrichCurriculum(response, finishedLessonIds);
+        return response;
+    }
+
+    private void enrichInstructors(List<CourseResponse> responses) {
+        List<String> instructorIds = responses.stream()
+                .map(CourseResponse::getInstructorId)
+                .filter(Objects::nonNull)
+                .distinct()
+                .toList();
+        
+        if (instructorIds.isEmpty()) return;
+
+        try {
+            ApiResponse<List<UserInternalResponse>> userBulkResponse = userClient.getUsersByIds(instructorIds);
+            if (userBulkResponse != null && userBulkResponse.isSuccess() && userBulkResponse.getPayload() != null) {
+                Map<String, UserInternalResponse> userMap = userBulkResponse.getPayload().stream()
+                        .collect(Collectors.toMap(UserInternalResponse::getId, u -> u));
+                
+                responses.forEach(resp -> {
+                    if (resp.getInstructorId() != null) {
+                        resp.setInstructor(userMap.get(resp.getInstructorId()));
+                    }
+                });
+            }
+        } catch (Exception e) {
+            log.error("Failed to bulk fetch instructors: {}", e.getMessage());
+        }
+    }
+
+    private void enrichRatings(List<CourseResponse> responses) {
+        List<String> courseIds = responses.stream()
+                .map(CourseResponse::getId)
+                .toList();
+        
+        if (courseIds.isEmpty()) return;
+
+        try {
+            ApiResponse<List<InteractionClient.InternalCourseRatingResponse>> ratingBulkResponse = 
+                    interactionClient.getCourseRatingsBulk(courseIds);
+            
+            if (ratingBulkResponse != null && ratingBulkResponse.isSuccess() && ratingBulkResponse.getPayload() != null) {
+                Map<String, InteractionClient.InternalCourseRatingResponse> ratingMap = ratingBulkResponse.getPayload().stream()
+                        .collect(Collectors.toMap(InteractionClient.InternalCourseRatingResponse::getCourseId, r -> r));
+                
+                responses.forEach(resp -> {
+                    InteractionClient.InternalCourseRatingResponse rating = ratingMap.get(resp.getId());
+                    if (rating != null) {
+                        resp.setAvgRatingStars(rating.getAvgRatingStars());
+                        resp.setNumOfReviews(rating.getNumOfReviews().intValue());
+                    }
+                });
+            }
+        } catch (Exception e) {
+            log.error("Failed to bulk fetch ratings: {}", e.getMessage());
+        }
+    }
+
+    private void enrichEnrollments(List<CourseResponse> responses) {
+        List<String> courseIds = responses.stream()
+                .map(CourseResponse::getId)
+                .toList();
+        
+        if (courseIds.isEmpty()) return;
+
+        try {
+            ApiResponse<Map<String, Long>> enrollmentRes = orderClient.getEnrollmentCountsBulk(courseIds);
+            if (enrollmentRes != null && enrollmentRes.isSuccess() && enrollmentRes.getPayload() != null) {
+                Map<String, Long> countMap = enrollmentRes.getPayload();
+                responses.forEach(resp -> {
+                    Long count = countMap.get(resp.getId());
+                    resp.setStudentCount(count != null ? count.intValue() : 0);
+                });
+            }
+        } catch (Exception e) {
+            log.error("Failed to bulk fetch student counts: {}", e.getMessage());
+        }
+    }
+
+    private void enrichCurriculum(CourseResponse response, Set<String> finishedLessonIds) {
+        var sections = sectionRepository.findAllByCourseIdOrderByPositionAsc(response.getId());
+        var allLessons = lessonRepository.findAllByCourseIdOrderByPositionAsc(response.getId());
+
+        var lessonsBySection = allLessons.stream()
+                .collect(Collectors.groupingBy(Lesson::getSectionId));
+
+        int totalLessons = allLessons.size();
+        double totalDuration = allLessons.stream()
+                .mapToDouble(l -> l.getVideoLength() != null ? l.getVideoLength() : 0)
+                .sum();
+
+        List<SectionResponse> sectionResponses = sections.stream()
+                .map(section -> {
+                    var sResp = sectionMapper.entityToResponse(section);
+                    var lessons = lessonsBySection.getOrDefault(section.getId(), Collections.emptyList());
+                    
+                    List<LessonResponse> lResponses = lessonMapper.entityToResponse(lessons);
+                    // Standard: Overlay "isDone" from learning-service
+                    lResponses.forEach(lr -> {
+                        if (finishedLessonIds.contains(lr.getId())) {
+                            lr.setIsDone(true);
+                        }
+                    });
+                    
+                    sResp.setLessons(lResponses);
+                    return sResp;
+                })
+                .toList();
+
+        response.setSections(sectionResponses);
+        response.setSectionCount(sections.size());
+        response.setLessonCount(totalLessons);
+        response.setTotalVideosLength(totalDuration);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public ListResponse<CourseResponse> search(String text, Pageable pageable) {
         Page<Course> coursePage;
         if (text == null || text.trim().isEmpty()) {
@@ -110,30 +285,41 @@ public class CourseServiceImpl implements CourseService {
             coursePage = courseRepository.findAllBy(criteria, pageable);
         }
 
-        return ListResponse.of(courseMapper.entityToResponse(coursePage.getContent()), coursePage);
+        List<CourseResponse> responses = courseMapper.entityToResponse(coursePage.getContent());
+        enrichInstructors(responses);
+        enrichRatings(responses);
+        enrichEnrollments(responses);
+        return ListResponse.of(responses, coursePage);
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<CourseResponse> getPopularCourses(int limit) {
-        // Logic from monolith: Aggregate orders to find most bought courses
-        // Currently a placeholder returning newest courses
-        Pageable pageable = PageRequest.of(0, limit, Sort.by("createdAt").descending());
-        return courseMapper.entityToResponse(courseRepository.findAll(pageable).getContent());
+        Pageable pageable = PageRequest.of(0, limit, Sort.by("views").descending());
+        List<CourseResponse> responses = courseMapper.entityToResponse(courseRepository.findAll(pageable).getContent());
+        enrichInstructors(responses);
+        enrichRatings(responses);
+        enrichEnrollments(responses);
+        return responses;
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<CourseResponse> getRelatedCourses(String courseId, int limit) {
         Course course = courseRepository.findById(courseId).orElse(null);
-        if (course == null || course.getCategory() == null) return List.of();
+        if (course == null || course.getCategory() == null) return Collections.emptyList();
         
-        // Find courses in same category excluding current one
-        return courseMapper.entityToResponse(
+        List<CourseResponse> responses = courseMapper.entityToResponse(
                 courseRepository.findAllByCategoryId(course.getCategory().getId())
                         .stream()
                         .filter(c -> !c.getId().equals(courseId))
                         .limit(limit)
                         .toList()
         );
+        enrichInstructors(responses);
+        enrichRatings(responses);
+        enrichEnrollments(responses);
+        return responses;
     }
 
     @Override
@@ -150,7 +336,7 @@ public class CourseServiceImpl implements CourseService {
 
     @Override
     public List<String> getWishlistIds(String userId) {
-        return List.of(); // Placeholder
+        return Collections.emptyList();
     }
 
     @Override
@@ -159,18 +345,21 @@ public class CourseServiceImpl implements CourseService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public CourseResponse getEnrolledDetail(String id) {
         // Monolith logic: includes progress, sections, lessons
-        return detail(id); 
+        return null;
     }
 
     @Override
+    @Transactional(readOnly = true)
     public CourseResponse getFullDetail(String id) {
         // Monolith logic: getCourseDetail
-        return detail(id);
+        return null;
     }
 
     @Override
+    @Transactional
     public void increaseView(String id) {
         Course course = courseRepository.findById(id).orElse(null);
         if (course != null) {
@@ -181,10 +370,11 @@ public class CourseServiceImpl implements CourseService {
 
     @Override
     public List<String> getUsersByCourseId(String id) {
-        return List.of(); // Placeholder
+        return Collections.emptyList();
     }
 
     @Override
+    @Transactional
     public void updateStatus(String id) {
         Course course = courseRepository.findById(id).orElseThrow(() -> 
                 new ResourceNotFoundException(AppConstants.Resource_Constants.COURSE, AppConstants.Field_Constants.ID, id));
@@ -194,14 +384,16 @@ public class CourseServiceImpl implements CourseService {
     }
 
     @Override
+    @Transactional(readOnly = true)
     public List<CourseResponse> getAllActiveCourses() {
         // CourseStatus.PUBLISHED ? 
         return courseMapper.entityToResponse(courseRepository.findAll()); 
     }
 
     @Override
+    @Transactional(readOnly = true)
     public ListResponse<Object> getHistories(String id, int page, int limit) {
-        return ListResponse.of(List.of(), page, limit, 0, 0, true); // Placeholder
+        return ListResponse.of(Collections.emptyList(), page, limit, 0, 0, true);
     }
 
     private String toSlug(String input) {
